--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
+    "ini": "^3.0.1",
     "sass-loader": "^13.0.2",
     "save": "^2.5.0",
     "vue": "^3.2.13",
