--- a/public/config.ini
+++ b/public/config.ini
@@ -1,6 +1,11 @@
 [Vue]
-AppName = AudioBook Player
-debug = false
-curLang = en
+; App name
+AppName = Audio Files Player
+; Turn on/off debug mode. If true then some infomation will log to console.
+debug = true
+; Set current language (en or et).
+curLang = et
+; URL where app will find files.
 booksUrl = https://audiobooks.mella.ee/data/
+; Directory path where php modul can find the books catalogs.
 root = /var/www/space/audiobooks/data/
