--- a/public/config.ini
+++ b/public/config.ini
@@ -4,8 +4,8 @@ AppName = Audio Files Player
 ; Turn on/off debug mode. If true then some infomation will log to console.
 debug = true
 ; Set current language (en or et).
-curLang = et
+curLang = en
 ; URL where app will find files.
-booksUrl = https://audiobooks.mella.ee/data/
+booksUrl = /data/
 ; Directory path where php modul can find the books catalogs.
-root = /var/www/space/audiobooks/data/
+root = ../data/
