--- a/public/config.ini
+++ b/public/config.ini
@@ -2,7 +2,7 @@
 ; App name
 AppName = Audio Files Player
 ; Turn on/off debug mode. If true then some infomation will log to console.
-debug = true
+debug = false
 ; Set current language (en or et).
 curLang = en
 ; URL where app will find files.
