--- a/public/config.ini
+++ b/public/config.ini
@@ -1,8 +1,8 @@
 [Vue]
 ; App name
-AppName = Audio Files Player
+AppName = AudioBook Player
 ; Turn on/off debug mode. If true then some infomation will log to console.
-debug = true
+debug = false
 ; Set current language (en or et).
 curLang = en
 ; URL where app will find files.
