Multi file types.

--- a/public/config.ini
+++ b/public/config.ini
@@ -9,3 +9,5 @@ curLang = en
 booksUrl = /data/
 ; Directory path where php modul can find the books catalogs.
 root = ../data/
+; File types what can play (mp3,m4a)
+ftypes = mp3,m4a
