Multi file types.

--- a/public/config.ini
+++ b/public/config.ini
@@ -1,4 +1,3 @@
-[Vue]
 ; App name
 AppName = AudioBook Player
 ; Turn on/off debug mode. If true then some infomation will log to console.
@@ -10,4 +9,4 @@ booksUrl = /data/
 ; Directory path where php modul can find the books catalogs.
 root = ../data/
 ; File types what can play (mp3,m4a)
-ftypes = mp3,m4a
+ftypes = mp3,m4a,wav
