--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
     "accessibility": "^4.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
-    "core-js": "^3.8.3",
     "ini": "^3.0.1",
     "sass-loader": "^13.0.2",
     "save": "^2.5.0",
@@ -20,7 +18,6 @@
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.54.8",
-    "vue-template-compiler": "^2.5.17"
+    "sass": "^1.55.0"
   }
 }
