--- a/public/config.ini
+++ b/public/config.ini
@@ -1,3 +1,5 @@
+; Site URL
+siteUrl = https://domain.com/
 ; App name
 AppName = AudioBook Player
 ; Turn on/off debug mode. If true then some infomation will log to console.
